--- a/WcfWpf.App/MainWindow.xaml
+++ b/WcfWpf.App/MainWindow.xaml
@@ -4,8 +4,11 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WcfWpf.App"
-        mc:Ignorable="d"
+        mc:Ignorable="d" 
         Title="Wpf app" Height="394" Width="808">
+    <Window.DataContext>
+        <local:MainVM></local:MainVM>
+    </Window.DataContext>
     <Grid Margin="10,0,10,0">
         <Grid.Background>
             <ImageBrush ImageSource="Graphics/watermark.png"/>
@@ -27,9 +30,14 @@
             View Expense Report
         </Label>
         <Border Background="#4E87D4" Grid.Column="1" Grid.Row="1" Padding="5" Grid.ColumnSpan="3">
-            <Label x:Name="LabelOutput" Content="List on numbers" VerticalAlignment="Center" Foreground="White" Margin="0,0,52,0"/>
+            <Label x:Name="LabelOutput"  Content="{Binding Counter.Value}" VerticalAlignment="Center" Foreground="White" Margin="0,0,52,0"/>
         </Border>
-        <Button Content="Button" HorizontalAlignment="Right" Margin="0,2,0,0" Width="125" Click="Button_Click" Grid.Row="3" Grid.Column="3"/>
+        <Border Background="#4E87D4" Grid.Column="1" Grid.Row="1" Padding="5" Grid.ColumnSpan="3">
+            <Label x:Name="LabelStatus"  Content="{Binding Status}" VerticalAlignment="Center" Foreground="White" Margin="0,0,22,0"/>
+        </Border>
+        <Button Content="Start" HorizontalAlignment="Right" Margin="0,2,0,0" Width="125" Command="{Binding StartCount}" Grid.Row="3" Grid.Column="3">
+            
+        </Button>
         <ListBox Height="120"  Grid.Row="2"  Grid.Column="1" Margin="14,16,14,17" Width="540" Grid.ColumnSpan="3">
             <ListBoxItem>One</ListBoxItem>
             <ListBoxItem>Two</ListBoxItem>
